# tap-planetscaleapi

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yml  update_catalog.yml
scripts/: update_openapi.py
tap_planetscaleapi/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_planetscaleapi/openapi/: __init__.py  openapi.json
tests/: __init__.py  conftest.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[backups].json  test_catalog_changes[branches].json  test_catalog_changes[database_read_only_regions].json  test_catalog_changes[database_regions].json  test_catalog_changes[databases].json  test_catalog_changes[deploy_operations].json  test_catalog_changes[deploy_request_reviews].json  test_catalog_changes[deploy_requests].json  test_catalog_changes[organization_regions].json  test_catalog_changes[organizations].json  test_catalog_changes[passwords].json  test_catalog_changes[regions].json
