[project]
name = "tap-planetscaleapi"
dynamic = [
    "version",
]
description = "Singer tap for PlanetScaleAPI, built with the Meltano Singer SDK."
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "PlanetScaleAPI",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "singer-sdk~=0.53.2",
    "toolz~=1.1.0",
]

[project.optional-dependencies]
s3 = ["s3fs>=2025.5.0"]

[project.urls]
Homepage = "https://github.com/reservoir-data/tap-planetscalepi"
Documentation = "https://github.com/reservoir-data/tap-planetscalepi#"
"Issue Tracker" = "https://github.com/reservoir-data/tap-planetscalepi/issues"
Repository = "https://github.com/reservoir-data/tap-planetscalepi"

[project.scripts]
tap-planetscaleapi = "tap_planetscaleapi.tap:TapPlanetScaleAPI.cli"

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pytest>=9",
    "requests-cache>=1.2",
    "singer-sdk[testing]",
    "syrupy>=5.0.0",
    "ty>=0.0.1a28",
    "types-requests>=2.31.0.6",
]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
follow_untyped_imports = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "toolz.*",  # https://github.com/pytoolz/toolz/issues/496
]

[tool.ruff]
line-length = 140
preview = true
src = ["tap_planetscaleapi"]

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.flake8-copyright]
author = "Edgar Ramírez-Mondragón"
min-file-size = 1024  # Avoid enforcing a header on files smaller than 1024 bytes.

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_planetscaleapi"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling==1.28.0",
    "hatch-vcs==0.5",
]
build-backend = "hatchling.build"

[tool.pytest]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
log_level = "INFO"
minversion = "9.0"
filterwarnings = [
    "error",
    "default:Fields in transformed catalog but not in records:UserWarning",
    "ignore:No records returned in stream:UserWarning",
    "ignore:No records were available to test:UserWarning",
]
testpaths = [
  "tests",
]
xfail_strict = true

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"
